# IVS_Calculator

./: .gitignore  CMakeLists.txt  INSTALL.md  Kalkulacka.desktop  README.md  hodnoceni.txt  postinst  skutecnost.txt
plan/: xdurkal00_xvihond00_xmihalp01_plan.txt
src/: Doxyfile  Makefile  bkMAIN  calc.cpp  calculatorGUI  calculator_test  main.cpp  main_gui.cpp  makefile  opengl_test.cpp  profiling  profiling.cpp
src/docs/html/: TextRenderer_8cpp.html  TextRenderer_8cpp.js  TextRenderer_8cpp_source.html  TextRenderer_8h.html  TextRenderer_8h.js  TextRenderer_8h_source.html  annotated.html  annotated_dup.js  classTextRenderer-members.html  classTextRenderer.html  classTextRenderer.js  classes.html  classtinyobj_1_1MaterialFileReader-members.html  classtinyobj_1_1MaterialFileReader.html  classtinyobj_1_1MaterialReader-members.html  classtinyobj_1_1MaterialReader.html  classtinyobj_1_1MaterialStreamReader-members.html  classtinyobj_1_1MaterialStreamReader.html  classtinyobj_1_1ObjReader-members.html  classtinyobj_1_1ObjReader.html  dir_02bb4276feccd22e9044cb8e9002c01e.html  dir_02bb4276feccd22e9044cb8e9002c01e.js  dir_59abd49875316e4155a79864a290b9ca.html  dir_59abd49875316e4155a79864a290b9ca.js  dir_b7fe78aba86e0fa012e413bf6f07acf9.html  dir_b7fe78aba86e0fa012e413bf6f07acf9.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  glad_8h.html  glad_8h.js  glad_8h_source.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  (+116 more)
src/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  defines_2.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  (+48 more)
src/include/: TextRenderer.h  mathlibrary.h
src/objects/: calc.mtl
src/opengl_demo/: Makefile  cube_demo  main.cpp
src/opengl_demo/include/glad/: glad.h
src/opengl_demo/shaders/: fragment.glsl  vertex.glsl
src/shaders/: skybox.frag  skybox.vert  solid.frag  solid.vert  text.frag
src/src/: TextRenderer.cpp  glad.c  mathlibrary.cpp  pather.h
src/tests/: test.cpp
